# basic_linggong

./: sdkconfig
components/BSP/: CMakeLists.txt
components/BSP/LCD/: icna3312.c  icna3312.h  lcd.c  lcd.h
components/BSP/POWER/: ds4730.c  ds4730.h
components/BSP/SPI/: spi.c  spi.h
main/: CMakeLists.txt  main.c
